without local test

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
+<div class="clock-container">
+  <div class="clock-center"></div>
+  <div class="minute strelka"></div>
+  <div class="seconds strelka"></div>
+</div>
 <script type="text/javascript" src="./main.js"></script>
 </body>
 </html>
